--- a/biryani-project.html
+++ b/biryani-project.html
@@ -184,7 +184,7 @@
                         target="_blank">A post shared by Areena Arora (@feelin_gredient)</a></p>
             </div>
             </blockquote>
-            <script async src="https://www.instagram.com/embed.js"></script>
+            <script async src="https://instagram.com/static/bundles/es6/EmbedSDK.js/47c7ec92d91e.js"></script>
         </div>
         <br><br>
         My code for this analysis can be found <a href="https://github.com/areenaarora/street-food-bluru"
