--- a/index.html
+++ b/index.html
@@ -88,6 +88,21 @@
         <br>
         <div class="columns is-4">
             <p>
+                <div class="column is-one-third">
+                    <a href='https://areenaarora.com/biryani-project' target="_blank">
+                        <strong> Where's India's best and cheapest Biryani?</a></strong>
+                    <br>
+                    👩🏻‍💻: <a href='https://pandas.pydata.org/' target='_blank'><span
+                            class="tag is-success">Pandas</span></a> <a
+                        href='https://www.crummy.com/software/BeautifulSoup/bs4/doc/' target='_blank'><span
+                            class="tag is-success">Beautiful Soup</span></a>
+                    <a href='https://www.selenium.dev' target='_blank'> <span class="tag is-success">Selenium</span></a>
+                    <br>
+                    Built a database of restaurants that deliver Biryani in six Indian cities for a quick and fun
+                    analysis.<strong> <br>February 2022</strong>
+                </div>
+                </p>
+            <p>
             <div class="column is-one-third">
                 <a href='https://github.com/areenaarora/scraping-newsroom-style-guides' target="_blank">
                     <strong>Comparing different newsrooms' style-guides </a></strong>
@@ -96,7 +111,7 @@
                     class="tag is-success">PDF Miner</span>
                 <br>
                 Compared how different words are defined by different news organizations to get an insight into their
-                editorial decisions.<strong> December 2021</strong>
+                editorial decisions.<strong> <br> December 2021</strong>
             </div>
             </p>
             <p>
@@ -108,22 +123,7 @@
                     href='https://fontawesome.com/' target='_blank'><span class="tag is-success">Font Awesome</span></a>
                 <a href='https://freeicons.io/ target=' _blank'> <span class="tag is-success">Free Icons</span></a>
                 <br>
-                Using this website as my design skills' playground.<strong> December 2021</strong>
-            </div>
-            </p>
-            <p>
-            <div class="column is-one-third">
-                <a href='https://areenaarora.com/biryani-project' target="_blank">
-                    <strong> Where's India's best and cheapest Biryani?</a></strong>
-                <br>
-                👩🏻‍💻: <a href='https://pandas.pydata.org/' target='_blank'><span
-                        class="tag is-success">Pandas</span></a> <a
-                    href='https://www.crummy.com/software/BeautifulSoup/bs4/doc/' target='_blank'><span
-                        class="tag is-success">Beautiful Soup</span></a>
-                <a href='https://www.selenium.dev' target='_blank'> <span class="tag is-success">Selenium</span></a>
-                <br>
-                Built a database of restaurants that deliver Biryani in six Indian cities for a quick and fun
-                analysis.<strong> February 2022</strong>
+                Using this website as my design skills' playground.<strong><br>December 2021</strong>
             </div>
             </p>
         </div>
