Add Plausible analytics script

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
     <link rel="icon" href="icon.png">
     <link rel="stylesheet" href="stylesheet-light.css">
+    <script defer data-domain="areenaarora.com" src="https://plausible.io/js/plausible.js"></script>
     <!-- <link rel="stylesheet" href="stylesheet-dark.css"> -->
     <title>Home</title>
 </head>
