--- a/resume.html
+++ b/resume.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
     <link rel="icon" href="icon.png">
     <link rel="stylesheet" href="resume-stylesheet.css">
+    <script defer data-domain="areenaarora.com" src="https://plausible.io/js/plausible.js"></script>
     <title>Resume</title>
 </head>
 
