Added insect project

--- a/index.html
+++ b/index.html
@@ -89,6 +89,18 @@
         <div class="columns is-4">
             <p>
                 <div class="column is-one-third">
+                    <a href='https://github.com/areenaarora/scraping-newsroom-style-guides' target="_blank">
+                        <strong>Can an insects-based diet solve world hunger? </a></strong>
+                    <br>
+                    👩🏻‍💻: <span class="tag is-success">Python</span> <span class="tag is-success">Regex</span> <span
+                        class="tag is-success">PDF Miner</span>
+                    <br>
+                    Compared how different words are defined by different news organizations to get an insight into their
+                    editorial decisions.<strong> <br> December 2021</strong>
+                </div>
+                </p>
+            <p>
+                <div class="column is-one-third">
                     <a href='https://areenaarora.com/biryani-project' target="_blank">
                         <strong> Where's India's best and cheapest Biryani?</a></strong>
                     <br>
