--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </h3>
         <h2><strong>Programming</strong></h2>
         <br>
-        <div class="columns is-4">
+        <div class="columns is-multiline">
             <p>
                 <div class="column is-one-third">
                     <a href='https://github.com/areenaarora/scraping-newsroom-style-guides' target="_blank">
