--- a/index.html
+++ b/index.html
@@ -92,11 +92,9 @@
                     <a href='https://github.com/areenaarora/scraping-newsroom-style-guides' target="_blank">
                         <strong>Can an insects-based diet solve world hunger? </a></strong>
                     <br>
-                    👩🏻‍💻: <span class="tag is-success">Python</span> <span class="tag is-success">Regex</span> <span
-                        class="tag is-success">PDF Miner</span>
+                    👩🏻‍💻: <span class="tag is-success">Python</span> <span class="tag is-success">Excel</span>
                     <br>
-                    Compared how different words are defined by different news organizations to get an insight into their
-                    editorial decisions.<strong> <br> December 2021</strong>
+                    A data dive into insects as a replacement for meat-based diets, using data from UN Food and Agriculture Organization and Organisation for Economic Co-operation and Development.<strong> <br> February 2022</strong>
                 </div>
                 </p>
             <p>
