--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <div class="columns is-multiline">
             <p>
                 <div class="column is-one-third">
-                    <a href='https://github.com/areenaarora/scraping-newsroom-style-guides' target="_blank">
+                    <a href='https://areenaarora.com/insects-project' target="_blank">
                         <strong>Can an insects-based diet solve world hunger? </a></strong>
                     <br>
                     👩🏻‍💻: <span class="tag is-success">Python</span> <span class="tag is-success">Excel</span>
