--- a/insects-project.html
+++ b/insects-project.html
@@ -31,14 +31,13 @@
             </ul>
         </nav>
 
-<p style="font-size: 28px; color: black; font-weight: bold; text-align: center;"> The world needs more food.</p>
+<p style="font-size: 28px; color: black; font-weight: bold; text-align: center;"> THE WORLD NEEDS MORE FOOD.</p>
+<p style="font-size: 24px; color:#580038; text-align: left;">Are insects the way to go? </p>
 <br>
-<p>-Are insects the way to go? </p>
-
 In 2000, the world had 800 million undernourished people, according to data from UN's Food and Agriculture Organization.  
 Undernourished population is defined as an estimate of the population whose food consumption "is insufficient to provide the dietary energy levels required to maintain a normal active and healthy life".
-<br>
-By 2020, the latest available data, the number of undernourished people fell to 768 million, jumping significantly from 2019.
+<br><br>
+By 2020, the latest available data, the number of undernourished people fell to 768 million, although jumping up significantly from 2019's 650 million.
 <br> <br>
-<iframe title="Number of undernourished people in the world in millions" aria-label="Column Chart" id="datawrapper-chart-j25hL" src="https://datawrapper.dwcdn.net/j25hL/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="566"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
+<iframe title="Number of undernourished people in the world in millions" aria-label="Column Chart" id="datawrapper-chart-j25hL" src="https://datawrapper.dwcdn.net/j25hL/2/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="350"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
 </script>
