--- a/insects-project.html
+++ b/insects-project.html
@@ -34,6 +34,10 @@
 <p style="font-size: 28px; color: black; font-weight: bold; text-align: center;"> THE WORLD NEEDS MORE FOOD.</p>
 <p style="font-size: 24px; color:#580038; text-align: left;">Are insects the way to go? </p>
 <br>
+I'm trying to go vegan and as of writing this, it's not going too well. Turns out, chanding dietary habbits isn't as easy as snapping your fingers.
+<br>
+Even so, here I am, proposing that the world switch to, or at least to some degree adapt an insect-based diet. The incentive? It can save the world!
+<br>
 In 2000, the world had 800 million undernourished people, according to data from UN's Food and Agriculture Organization.  
 Undernourished population is defined as an estimate of the population whose food consumption "is insufficient to provide the dietary energy levels required to maintain a normal active and healthy life".
 <br><br>
