--- a/insects-project.html
+++ b/insects-project.html
@@ -38,7 +38,8 @@ I'm trying to go vegan and as of writing this, it's not going too well. Turns ou
 <br>
 Even so, here I am, proposing that the world switch to, or at least to some degree adapt an insect-based diet. The incentive? It can save the world!
 <br>
-In 2000, the world had 800 million undernourished people, according to data from UN's Food and Agriculture Organization.  
+The world needs more food. In 2000, there were 800 million undernourished people globally, according to data from UN's Food and Agriculture Organization. 
+<br>
 Undernourished population is defined as an estimate of the population whose food consumption "is insufficient to provide the dietary energy levels required to maintain a normal active and healthy life".
 <br><br>
 By 2020, the latest available data, the number of undernourished people fell to 768 million, although jumping up significantly from 2019's 650 million.
