--- a/insects-project.html
+++ b/insects-project.html
@@ -34,15 +34,15 @@
 <p style="font-size: 28px; color: black; font-weight: bold; text-align: center;"> THE WORLD NEEDS MORE FOOD.</p>
 <p style="font-size: 24px; color:#580038; text-align: left;">Are insects the way to go? </p>
 <br>
-I'm trying to go vegan and as of writing this, it's not going too well. Turns out, chanding dietary habbits isn't as easy as snapping your fingers.
+I'm trying to go vegan and as of writing this, it's not going too well. Turns out, changing dietary habbits isn't as easy as snapping your fingers. Bummer!
 <br><br>
-Even so, here I am, proposing that the world switch to, or at least to some degree adapt an insect-based diet. The incentive? It can save the world!
+Even so, here I am, proposing that the world switch to, or at least to some degree adapt an insect-based diet. The incentive? It can save the world! 🌎
 <br><br>
-The world needs more food. In 2000, there were 800 million undernourished people globally, according to data from UN's Food and Agriculture Organization. 
+The world needs more food. In 2000, there were 800 million undernourished people globally, according to data from UN's Food and Agriculture Organization. By 2020, the latest available data, the number of undernourished people fell to 768 million, although jumping up significantly from 2019's 650 million.
 <br><br>
 Undernourished population is defined as an estimate of the population whose food consumption "is insufficient to provide the dietary energy levels required to maintain a normal active and healthy life".
-<br><br>
-By 2020, the latest available data, the number of undernourished people fell to 768 million, although jumping up significantly from 2019's 650 million.
 <br> <br>
 <iframe title="Number of undernourished people in the world in millions" aria-label="Column Chart" id="datawrapper-chart-j25hL" src="https://datawrapper.dwcdn.net/j25hL/2/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="350"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
 </script>
+<br> <br>
+We know we need more food. The other trouble is — the food we currently have and the production means we use aren't sustainable. There is a growing demand for food as the world's agricultural land declines.
