--- a/index.html
+++ b/index.html
@@ -91,11 +91,14 @@
             <p>
                 <div class="column is-one-third">
                     <a href='https://areenaarora.com/insects-project' target="_blank">
-                        <strong>Can an insects-based diet solve world hunger? </a></strong>
+                        <strong>Hazardous spills in New York over the last five years </a></strong>
                     <br>
                     👩🏻‍💻: <span class="tag is-success">Python</span> <span class="tag is-success">Excel</span>
+                    <a href='https://ggplot2.tidyverse.org/reference/' target='_blank'><span class="tag is-success">ggplot2</span></a>
+                    <a href='https://pandas.pydata.org/' target='_blank'><span
+                        class="tag is-success">Pandas</span></a>
                     <br>
-                    A data dive into insects as a replacement for meat-based diets, using data from UN Food and Agriculture Organization and Organisation for Economic Co-operation and Development.<strong> <br> February 2022</strong>
+                    A data dive into hazardous material spill incidents in New York state in the last five years.<strong> <br> February 2022</strong>
                 </div>
                 </p>
             <p>
