--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <div class="columns is-multiline">
             <p>
                 <div class="column is-one-third">
-                    <a href='https://areenaarora.com/insects-project' target="_blank">
+                    <a href='https://areenaarora.com/new-york-state-spills' target="_blank">
                         <strong>Hazardous spills in New York over the last five years </a></strong>
                     <br>
                     👩🏻‍💻: <span class="tag is-success">Python</span> <span class="tag is-success">Excel</span>
