--- a/insects-project.html
+++ b/insects-project.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
     <link rel="icon" href="icon.png">
     <link rel="stylesheet" href="stylesheet-light.css">
-    <title>Edible Insects</title>
+    <title>New York State spills</title>
 </head>
 
 <body style='background-color: #FBFCFC; padding:40px;'>
