--- a/new-york-state-spills.html
+++ b/new-york-state-spills.html
@@ -31,10 +31,9 @@
             </ul>
         </nav>
 
-<p style="font-size: 28px; color: black; font-weight: bold; text-align: center;"> THE WORLD NEEDS MORE FOOD.</p>
-<p style="font-size: 24px; color:#580038; text-align: left;">Are insects the way to go? </p>
+<p style="font-size: 28px; color: black; font-weight: bold; text-align: center;"> A Look At Hazardous Spills in New York</p>
 <br>
-I'm trying to go vegan and as of writing this, it's not going too well. Turns out, changing dietary habbits isn't as easy as snapping your fingers. Bummer!
+In the last five years, New York recorded over 61,000 hazardous material spills across the state. These ranged from 
 <br><br>
 Even so, here I am, proposing that the world switch to, or at least to some degree adapt an insect-based diet. The incentive? It can save the world! 🌎
 <br><br>
