--- a/new-york-state-spills.html
+++ b/new-york-state-spills.html
@@ -36,3 +36,6 @@
 In the last five years, New York recorded over 61,000 hazardous material spills across the state. Of the 72 counties from the state included in the dataset, Westchester had the most number of spill incidents recorded. But, when it comes to counties with the biggest spills by quantity of material spilled, Albany leads the way! 
 <br><br>
 <img src="Albany-spills.png">
+<br> <br>
+Fuel and transformer oil were the most common materials spilled. The biggest spill in the last five years happened in August 2017 when over a hundred billion pounds of food waste spilled, affecting the air. It happened in a landfill in Colonie in Albany. The database doesn't give out its cause or any other additional details. 
+<img src="food-spill">
