--- a/new-york-state-spills.html
+++ b/new-york-state-spills.html
@@ -38,4 +38,9 @@ In the last five years, New York recorded over 61,000 hazardous material spills 
 <img src="Albany-spills.png">
 <br> <br>
 Fuel and transformer oil were the most common materials spilled. The biggest spill in the last five years happened in August 2017 when over a hundred billion pounds of food waste spilled, affecting the air. It happened in a landfill in Colonie in Albany. The database doesn't give out its cause or any other additional details. 
+<br><br>
 <img src="food-spill">
+<br><br>
+Three more incidents were found the same facility each with major spillage quantities. All these spills, when cross-referenced with the detailed spill incidents search database reportedly affected the air with odor. No further details were reported on the database. The town of Colonie's population is over 83,000, according to its website. It's about 160 miles north of New York City.
+<br><br>
+<iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d1524975.1538542125!2d-74.98947826580897!3d41.71043855123143!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e0!4m5!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew%20York%20City%2C%20NY!3m2!1d40.7127753!2d-74.0059728!4m5!1s0x89de0ce1bf7cdb8d%3A0x577610d40a5db931!2sColonie%2C%20NY!3m2!1d42.7236699!2d-73.77132!5e0!3m2!1sen!2sus!4v1645392160717!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
