--- a/new-york-state-spills.html
+++ b/new-york-state-spills.html
@@ -44,3 +44,7 @@ Fuel and transformer oil were the most common materials spilled. The biggest spi
 Three more incidents were found the same facility each with major spillage quantities. All these spills, when cross-referenced with the detailed spill incidents search database reportedly affected the air with odor. No further details were reported on the database. The town of Colonie's population is over 83,000, according to its website. It's about 160 miles north of New York City.
 <br><br>
 <iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d1524975.1538542125!2d-74.98947826580897!3d41.71043855123143!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e0!4m5!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew%20York%20City%2C%20NY!3m2!1d40.7127753!2d-74.0059728!4m5!1s0x89de0ce1bf7cdb8d%3A0x577610d40a5db931!2sColonie%2C%20NY!3m2!1d42.7236699!2d-73.77132!5e0!3m2!1sen!2sus!4v1645392160717!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+<br><br>
+For New Yorkers, closer to home, the biggest spill happened in November last year in Jamaica, Queens. Over three million gallons of jet fuel spilled affecting the soil in the area. 
+<br><br>
+We also looked at the number of days it takes to close incident complaints. Some of the longest ones were well over a thousand days, but there's no reason listed for the delay. The quantity of spillage doesn't seem to matter, with the longest incident record being one about a gallon worth of petroleum spillage in Cayuga county.
