--- a/new-york-state-spills.html
+++ b/new-york-state-spills.html
@@ -31,9 +31,9 @@
             </ul>
         </nav>
 
-<p style="font-size: 28px; color: black; font-weight: bold; text-align: center;"> A Look At Hazardous Spills in New York</p>
+<p style="font-size: 28px; color: rgb(100, 99, 99); font-weight: bold; text-align: center;"> A Look At Hazardous Spills in New York</p>
 <br>
-In the last five years, New York recorded over 61,000 hazardous material spills across the state. Of the 72 counties from the state included in the dataset, Westchester had the most number of spill incidents recorded. But, when it comes to counties with the biggest spills by quantity of material spilled, Albany leads the way! 
+<p style = "font-family:Arial, Helvetica, sans-serif; font-size: 18px; color: black;">In the last five years, New York recorded over 61,000 hazardous material spills across the state. Of the 72 counties from the state included in the dataset, Westchester had the most number of spill incidents recorded. But, when it comes to counties with the biggest spills by quantity of material spilled, Albany leads the way! 
 <br><br>
 <img src="Albany-spills.png">
 <br> <br>
@@ -48,3 +48,6 @@ Three more incidents were found the same facility each with major spillage quant
 For New Yorkers, closer to home, the biggest spill happened in November last year in Jamaica, Queens. Over three million gallons of jet fuel spilled affecting the soil in the area. 
 <br><br>
 We also looked at the number of days it takes to close incident complaints. Some of the longest ones were well over a thousand days, but there's no reason listed for the delay. The quantity of spillage doesn't seem to matter, with the longest incident record being one about a gallon worth of petroleum spillage in Cayuga county.
+<br> <br>
+Another interesting phenomenon observed from the dataset — most spills occured in August and July. More specifically, most spills in a single month happened in August 2020.
+</p>
