--- a/new-york-state-spills.html
+++ b/new-york-state-spills.html
@@ -31,9 +31,9 @@
             </ul>
         </nav>
 
-<p style="font-size: 28px; color: rgb(100, 99, 99); font-weight: bold; text-align: center;"> A Look At Hazardous Spills in New York</p>
+<p style="font-size: 28px; color: rgb(100, 99, 99); font-weight: bold; text-align: center">A Look At Hazardous Spills in New York</p>
 <br>
-<p style = "font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif: 18px; color:#000000;">In the last five years, New York recorded over 61,000 hazardous material spills across the state. Of the 72 counties from the state included in the dataset, Westchester had the most number of spill incidents recorded. But, when it comes to counties with the biggest spills by quantity of material spilled, Albany leads the way! 
+<p style = "font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-size: 18px; color: black;">In the last five years, New York recorded over 61,000 hazardous material spills across the state. Of the 72 counties from the state included in the dataset, Westchester had the most number of spill incidents recorded. But, when it comes to counties with the biggest spills by quantity of material spilled, Albany leads the way! 
 <br><br>
 <img src="Albany-spills.png">
 <br> <br>
@@ -56,4 +56,4 @@ Another interesting phenomenon observed from the dataset — most spills occured
 </p>
 <p style="font-weight:bold; font-size:20px; color:#009abf; font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; text-align: center;"> Questions this dataset does not answer
 </p>
-<p style = "font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman; font-size: 18px; color:#000000;"> The dataset doesn't include what happenes to recovered hazardous materials neither does it speak to the affects of materials that remain suspended in natural resources like air and groundwater.
+<p style = "font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-size: 18px; color: black;">The dataset doesn't include what happenes to recovered hazardous materials neither does it speak to the affects of materials that remain suspended in natural resources like air and groundwater.
