--- a/new-york-state-spills.html
+++ b/new-york-state-spills.html
@@ -60,4 +60,5 @@ Another interesting phenomenon observed from the dataset — most spills occured
 <p style = "font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-size: 18px; color: black;">The dataset doesn't include what happenes to recovered hazardous materials neither does it speak to the affects of materials that remain suspended in natural resources like air and groundwater.
 The dataset also doesn't include information on number of people affected by the spills.
 </p>
-<p style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-size:18px; color:darkslateblue">This is an ongoing project and the data and code can be found <a href=here</p>
+<br><br>
+<p style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size:16px; color:darkslateblue"><i>This is an ongoing project and the data and code can be found <a href="https://github.com/areenaarora/ny-spills" target="_blank">here.</a></i></p>
