--- a/new-york-state-spills.html
+++ b/new-york-state-spills.html
@@ -47,7 +47,7 @@ Three more incidents were found the same facility each with major spillage quant
 <br><br>
 For New Yorkers, closer to home, the biggest spill happened in November last year in Jamaica, Queens. Over three million gallons of jet fuel spilled affecting the soil in the area. Digging deeper into incidents in Queens, jet fuel from airports seem to be the biggest troublemaker.
 <br><br>
-<img src="queens-spills.png">
+<img src="queens-spills.png" width="2000" height="3000">
 <br><br>
 We also looked at the number of days it takes to close incident complaints. Some of the longest ones were well over a thousand days, but there's no reason listed for the delay. The quantity of spillage doesn't seem to matter, with the longest incident record being one about a gallon worth of petroleum spillage in Cayuga county.
 <br> <br>
