--- a/new-york-state-spills.html
+++ b/new-york-state-spills.html
@@ -35,25 +35,25 @@
 <br>
 <p style = "font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-size: 18px; color: black;">In the last five years, New York recorded over 61,000 hazardous material spills across the state. Of the 72 counties from the state included in the dataset, Westchester had the most number of spill incidents recorded. But, when it comes to counties with the biggest spills by quantity of material spilled, Albany leads the way! 
 <br><br>
-<img src="Albany-spills.png" width="2000" height="3000">
+<center><img src="Albany-spills.png" width="700" height="500"></center>
 <br> <br>
 Fuel and transformer oil were the most common materials spilled. The biggest spill in the last five years happened in August 2017 when over a hundred billion pounds of food waste spilled, affecting the air. It happened in a landfill in Colonie in Albany. The database doesn't give out its cause or any other additional details. 
 <br><br>
-<img src="food-spill.png" width="2000" height="1000">
+<center><img src="food-spill.png" width="400" height="500"></center>
 <br><br>
 Three more incidents were found the same facility each with major spillage quantities. All these spills, when cross-referenced with the detailed spill incidents search database reportedly affected the air with odor. No further details were reported on the database. The town of Colonie's population is over 83,000, according to its website. It's about 160 miles north of New York City.
 <br><br>
-<iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d1524975.1538542125!2d-74.98947826580897!3d41.71043855123143!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e0!4m5!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew%20York%20City%2C%20NY!3m2!1d40.7127753!2d-74.0059728!4m5!1s0x89de0ce1bf7cdb8d%3A0x577610d40a5db931!2sColonie%2C%20NY!3m2!1d42.7236699!2d-73.77132!5e0!3m2!1sen!2sus!4v1645392160717!5m2!1sen!2sus" width="500" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+<center><iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d1524975.1538542125!2d-74.98947826580897!3d41.71043855123143!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e0!4m5!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew%20York%20City%2C%20NY!3m2!1d40.7127753!2d-74.0059728!4m5!1s0x89de0ce1bf7cdb8d%3A0x577610d40a5db931!2sColonie%2C%20NY!3m2!1d42.7236699!2d-73.77132!5e0!3m2!1sen!2sus!4v1645392160717!5m2!1sen!2sus" width="500" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe></center>
 <br><br>
 For New Yorkers, closer to home, the biggest spill happened in November last year in Jamaica, Queens. Over three million gallons of jet fuel spilled affecting the soil in the area. Digging deeper into incidents in Queens, jet fuel from airports seem to be the biggest troublemaker.
 <br><br>
-<img src="queens-spills.png" width="2000" height="3000">
+<center><img src="queens-spills.png" width="2000" height="3000"></center>
 <br><br>
 We also looked at the number of days it takes to close incident complaints. Some of the longest ones were well over a thousand days, but there's no reason listed for the delay. The quantity of spillage doesn't seem to matter, with the longest incident record being one about a gallon worth of petroleum spillage in Cayuga county.
 <br> <br>
 Another interesting phenomenon observed from the dataset — most spills occured in August and July. More specifically, most spills in a single month happened in August 2020.
 <br><br>
-<img src="top-spills.png" width="2000" height="3000">
+<center><img src="top-spills.png" width="2000" height="3000"></center>
 <br><br>
 </p>
 <p style="font-weight:bold; font-size:20px; color:#009abf; font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; text-align: center;"> Questions this dataset does not answer
