--- a/new-york-state-spills.html
+++ b/new-york-state-spills.html
@@ -31,7 +31,8 @@
             </ul>
         </nav>
 
-<p style="font-size: 28px; color: rgb(100, 99, 99); font-weight: bold; text-align: center">A Look At Hazardous Spills in New York</p>
+<p style="font-size: 25px; color: rgb(0, 0, 0); font-weight: bold; text-align: left">Westchester reports most number of hazardous spill incidents in New York</p>
+<p style="font-size: 18px; color: rgb(100, 99, 99); font-weight: bold; text-align: left">Albany reports most amount of stuff spilled</p>
 <br>
 <p style = "font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-size: 18px; color: black;">In the last five years, New York recorded over 61,000 hazardous material spills across the state. Of the 72 counties from the state included in the dataset, Westchester had the most number of spill incidents recorded. But, when it comes to counties with the biggest spills by quantity of material spilled, Albany leads the way! 
 <br><br>
@@ -45,7 +46,7 @@ Three more incidents were found the same facility each with major spillage quant
 <br><br>
 <center><iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d1524975.1538542125!2d-74.98947826580897!3d41.71043855123143!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e0!4m5!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew%20York%20City%2C%20NY!3m2!1d40.7127753!2d-74.0059728!4m5!1s0x89de0ce1bf7cdb8d%3A0x577610d40a5db931!2sColonie%2C%20NY!3m2!1d42.7236699!2d-73.77132!5e0!3m2!1sen!2sus!4v1645392160717!5m2!1sen!2sus" width="500" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe></center>
 <br><br>
-For New Yorkers, closer to home, the biggest spill happened in November last year in Jamaica, Queens. Over three million gallons of jet fuel spilled affecting the soil in the area. Digging deeper into incidents in Queens, jet fuel from airports seem to be the biggest troublemaker.
+For New Yorkers, closer to home, the biggest spill happened in November last year in Jamaica, Queens. Over three million gallons of jet fuel spilled affecting the soil in the area. Digging deeper into incidents in Queens, jet fuel from airports seem to be the biggest troublemaker. Some incidents are listed to have been caused 
 <br><br>
 <center><img src="queens-spills.png" width="2000" height="3000"></center>
 <br><br>
