--- a/new-york-state-spills.html
+++ b/new-york-state-spills.html
@@ -30,7 +30,7 @@
                 </li>
             </ul>
         </nav>
-
+<br>
 <p style="font-size: 25px; color: rgb(0, 0, 0); font-weight: bold; text-align: left">Westchester reports most number of hazardous spill incidents in New York</p>
 <p style="font-size: 18px; color: rgb(100, 99, 99); font-weight: bold; text-align: left">Albany reports most amount of stuff spilled</p>
 <br>
@@ -38,7 +38,7 @@
 <br><br>
 <center><img src="Albany-spills.png" width="700" height="500"></center>
 <br> <br>
-Fuel and transformer oil were the most common materials spilled. The biggest spill in the last five years happened in August 2017 when over a hundred billion pounds of food waste spilled, affecting the air. It happened in a landfill in Colonie in Albany. The database doesn't give out its cause or any other additional details. 
+Fuel and transformer oil were the most common materials spilled. While many reported incidents are minor and are cleaned up without any damage, in some other instances, spillage may seep through the soil, eventually entering groundwater and "can make water supplies unsafe to drink," according to the dataset's <a href="file:///Users/areena.arora/Downloads/NYSDEC_SpillIncidents_Overview.pdf" target="_blank">documentation provided by the city.</a> The biggest spill in the last five years happened in August 2017 when over a hundred billion pounds of food waste spilled, affecting the air. It happened in a landfill in Colonie in Albany. The database doesn't give out its cause or any other additional details. 
 <br><br>
 <center><img src="food-spill.png" width="400" height="500"></center>
 <br><br>
@@ -46,7 +46,7 @@ Three more incidents were found the same facility each with major spillage quant
 <br><br>
 <center><iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d1524975.1538542125!2d-74.98947826580897!3d41.71043855123143!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e0!4m5!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew%20York%20City%2C%20NY!3m2!1d40.7127753!2d-74.0059728!4m5!1s0x89de0ce1bf7cdb8d%3A0x577610d40a5db931!2sColonie%2C%20NY!3m2!1d42.7236699!2d-73.77132!5e0!3m2!1sen!2sus!4v1645392160717!5m2!1sen!2sus" width="500" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe></center>
 <br><br>
-For New Yorkers, closer to home, the biggest spill happened in November last year in Jamaica, Queens. Over three million gallons of jet fuel spilled affecting the soil in the area. Digging deeper into incidents in Queens, jet fuel from airports seem to be the biggest troublemaker. Some incidents are listed to have been caused 
+For New Yorkers, closer to home, the biggest spill happened in November last year in Jamaica, Queens. Over three million gallons of jet fuel spilled affecting the soil in the area. Digging deeper into incidents in Queens, jet fuel from airports seem to be the biggest troublemaker. Some incidents are listed to have had "deliberate"
 <br><br>
 <center><img src="queens-spills.png" width="2000" height="3000"></center>
 <br><br>
