--- a/new-york-state-spills.html
+++ b/new-york-state-spills.html
@@ -58,8 +58,9 @@ We also looked at the number of days it takes to close incident complaints. Some
 Another interesting phenomenon observed from the dataset — most spills occured in August and July. More specifically, most spills in a single month happened in August 2020.
 <br><br>
 <center><img src="top-spills.png" width="2000" height="3000"></center>
-<figcaption style="font-size:14px; color:rgb(0, 0, 0)">Incident details for the largest spill</figcaption>
+<figcaption style="font-size:14px; color:rgb(0, 0, 0)">Top ten incidents, by quantity plotted by county and sources</figcaption>
 <br><br>
+In Niagra, Chemung and Erie counties, commercial or industrial spillage is the biggest culprit.
 </p>
 <p style="font-weight:bold; font-size:20px; color:#009abf; font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; text-align: center;"> Questions this dataset does not answer
 </p>
