ADDED COVER IMAGE

--- a/new-york-state-spills.html
+++ b/new-york-state-spills.html
@@ -9,6 +9,7 @@
 </head>
 
 <body style='background-color: #FBFCFC; padding:40px;'>
+<img src="yassine-khalfalli-Qk7M_81Y1q8-unsplash.jpg" height="35vh" style="width:100vw; margin:-40px; background-size: cover;"/>
     <div style="width: 65%; margin: 0 auto;">
         <nav class="breadcrumb is-right has-bullet-separator" aria-label="breadcrumbs">
             <ul>
@@ -36,7 +37,7 @@
 <br>
 <p style = "font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-size: 18px; color: black;">In the last five years, New York recorded over 61,000 hazardous material spills across the state. Of the 72 counties from the state included in the dataset, Westchester had the most number of spill incidents recorded. But, when it comes to counties with the biggest spills by quantity of material spilled, Albany leads the way! 
 <br><br>
-<center><img src="Albany-spills.png" width="700" height="500"></center>
+<center><img src="Albany-spills.png" width="700" height="500"/></center>
 <br> <br>
 Fuel and transformer oil were the most common materials spilled. While many reported incidents are minor and are cleaned up without any damage, in some other instances, spillage may seep through the soil, eventually entering groundwater and "can make water supplies unsafe to drink," according to the dataset's <a href="file:///Users/areena.arora/Downloads/NYSDEC_SpillIncidents_Overview.pdf" target="_blank">documentation provided by the city.</a> The biggest spill in the last five years happened in August 2017 when over a hundred billion pounds of food waste spilled, affecting the air. It happened in a landfill in Colonie in Albany. The database doesn't give out its cause or any other additional details. 
 <br><br>
