--- a/new-york-state-spills.html
+++ b/new-york-state-spills.html
@@ -9,7 +9,7 @@
 </head>
 
 <body style='background-color: #FBFCFC; padding:40px;'>
-<img src="yassine-khalfalli-Qk7M_81Y1q8-unsplash.jpg" height="35vh" style="width:100vw; margin:-40px; background-size: cover;"/>
+<img src="yassine-khalfalli-Qk7M_81Y1q8-unsplash.jpg" style="width:100vw; height:60vh; margin-left:-40px; margin-right: -40px; margin-top: -40px; margin-bottom: 20px; max-width: 100vw; object-fit: cover;" alt="Generic image of New York"/>
     <div style="width: 65%; margin: 0 auto;">
         <nav class="breadcrumb is-right has-bullet-separator" aria-label="breadcrumbs">
             <ul>
@@ -37,11 +37,11 @@
 <br>
 <p style = "font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-size: 18px; color: black;">In the last five years, New York recorded over 61,000 hazardous material spills across the state. Of the 72 counties from the state included in the dataset, Westchester had the most number of spill incidents recorded. But, when it comes to counties with the biggest spills by quantity of material spilled, Albany leads the way! 
 <br><br>
-<center><img src="Albany-spills.png" width="700" height="500"/></center>
+<center><img src="Albany-spills.png" width="700" height="500" alt="Number of spills in Albany county by their source type"/></center>
 <br> <br>
 Fuel and transformer oil were the most common materials spilled. While many reported incidents are minor and are cleaned up without any damage, in some other instances, spillage may seep through the soil, eventually entering groundwater and "can make water supplies unsafe to drink," according to the dataset's <a href="file:///Users/areena.arora/Downloads/NYSDEC_SpillIncidents_Overview.pdf" target="_blank">documentation provided by the city.</a> The biggest spill in the last five years happened in August 2017 when over a hundred billion pounds of food waste spilled, affecting the air. It happened in a landfill in Colonie in Albany. The database doesn't give out its cause or any other additional details. 
 <br><br>
-<center><img src="food-spill.png" width="400" height="500"></center>
+<center><img src="food-spill.png" width="400" height="500" alt="Detailed report of the largest spill incident from the dataset"/></center>
 <figcaption style="font-size:14px; color:rgb(0, 0, 0)">Incident details for the largest spill</figcaption>
 <br><br>
 Three more incidents were found the same facility each with major spillage quantities. All these spills, when cross-referenced with the detailed spill incidents search database reportedly affected the air with odor. No further details were reported on the database. The town of Colonie's population is over 83,000, according to its website. It's about 160 miles north of New York City.
@@ -51,14 +51,14 @@ Three more incidents were found the same facility each with major spillage quant
 <br><br>
 For New Yorkers, closer to home, the biggest spill happened in November last year in Jamaica, Queens. Over three million gallons of jet fuel spilled affecting the soil in the area. Digging deeper into incidents in Queens, jet fuel from airports seem to be the biggest troublemaker. Some incidents are listed to have had "deliberate"
 <br><br>
-<center><img src="queens-spills.png" width="2000" height="3000"></center>
+<center><img src="queens-spills.png" width="2000" height="3000" alt="Airports are the source of the most spillage in Queens"/></center>
 <figcaption style="font-size:14px; color:rgb(0, 0, 0)">Airports are the source of the most spillage in Queens</figcaption>
 <br><br>
 We also looked at the number of days it takes to close incident complaints. Some of the longest ones were well over a thousand days, but there's no reason listed for the delay. The quantity of spillage doesn't seem to matter, with the longest incident record being one about a gallon worth of petroleum spillage in Cayuga county. The clean up process involves hiring a contractor by the state Department of Environmental Conservation.
 <br> <br>
 Another interesting phenomenon observed from the dataset — most spills occured in August and July. More specifically, most spills in a single month happened in August 2020.
 <br><br>
-<center><img src="top-spills.png" width="2000" height="3000"></center>
+<center><img src="top-spills.png" width="2000" height="3000" alt="Top ten incidents, by quantity plotted by county and sources"/></center>
 <figcaption style="font-size:14px; color:rgb(0, 0, 0)">Top ten incidents, by quantity plotted by county and sources</figcaption>
 <br>
 In Niagra, Chemung and Erie counties, commercial or industrial spillage is the biggest culprit.
