--- a/new-york-state-spills.html
+++ b/new-york-state-spills.html
@@ -64,8 +64,7 @@ Another interesting phenomenon observed from the dataset — most spills occured
 In Niagra, Chemung and Erie counties, commercial or industrial spillage is the biggest culprit.
 </p>
 <br><br>
-<p style="font-weight:bold; font-size:20px; color:#009abf; font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; text-align: center;"> Questions this dataset does not answer
-</p>
+<p style="font-weight:bold; font-size:20px; color:#009abf; font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; text-align: center;"> Questions this dataset does not answer</p>
 <br>
 <p style = "font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-size: 18px; color: black;">The dataset doesn't include what happenes to recovered hazardous materials neither does it speak to the affects of materials that remain suspended in natural resources like air and groundwater. The dataset also doesn't include information on number of people affected by the spills.
 <br><br>
