--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     <a href='https://pandas.pydata.org/' target='_blank'><span
                         class="tag is-success">Pandas</span></a>
                     <br>
-                    A data dive into hazardous material spill incidents in New York state in the last five years.<strong> <br> February 2022</strong>
+                    A data dive into hazardous material spill incidents in New York state in the last five years.<br>February 2022
                 </div>
                 </p>
             <p>
@@ -112,7 +112,7 @@
                     <a href='https://www.selenium.dev' target='_blank'> <span class="tag is-success">Selenium</span></a>
                     <br>
                     Built a database of restaurants that deliver Biryani in six Indian cities for a quick and fun
-                    analysis.<strong> <br>February 2022</strong>
+                    analysis.<br>February 2022
                 </div>
                 </p>
             <p>
@@ -124,7 +124,7 @@
                     class="tag is-success">PDF Miner</span>
                 <br>
                 Compared how different words are defined by different news organizations to get an insight into their
-                editorial decisions.<strong> <br> December 2021</strong>
+                editorial decisions.<br>December 2021
             </div>
             </p>
             <p>
@@ -136,7 +136,7 @@
                     href='https://fontawesome.com/' target='_blank'><span class="tag is-success">Font Awesome</span></a>
                 <a href='https://freeicons.io/ target=' _blank'> <span class="tag is-success">Free Icons</span></a>
                 <br>
-                Using this website as my design skills' playground.<strong><br>December 2021</strong>
+                Using this website as my design skills' playground.<br>December 2021
             </div>
             </p>
         </div>
@@ -158,8 +158,7 @@
                     A deep-dive about delays in the city's then biggest project. Also covered budget overage.
                     Extensively
                     used
-                    public records, govt officials' memos and coverage from city agencies' meetings. <strong>October
-                        2017</strong>
+                    public records, govt officials' memos and coverage from city agencies' meetings.<br>October 2017
 
                 </div>
                 <div class="column is-one-third">
@@ -167,8 +166,7 @@
                     <a href='https://www.idahopress.com/news/local/2cscoop/national-christmas-tree-shortage-drives-up-prices-at-canyon-county-tree-lots/article_1844a843-db04-523e-8db0-17b1d204e7ca.html'
                         target="_blank"><strong>National Christmas tree shortage drives up prices at Canyon County tree
                             lots</a></strong><br>
-                    Holiday special on why a decade after the recession Christmas tree got hit. <strong>November
-                        2017</strong>
+                    Holiday special on why a decade after the recession Christmas tree got hit.<br>November 2017
 
                 </div>
                 <div class='column is-one-third'>
@@ -176,27 +174,27 @@
                         target="_blank"> <strong>Culvert concerns: Culvert report reveals 11 other structures in
                             deficient
                             condition</a><br> </strong>Data-driven story on city's inaction on damaging culverts. Also
-                    inspected inter-agency jurisdiction issues. <br><strong>December 2017</strong>
+                    inspected inter-agency jurisdiction issues.<br>December 2017
                 </div>
                 <div class="column is-one-third">
                     <a href='https://www.idahopress.com/news/local/2cscoop/prosecutor-retired-boise-priest-found-with-child-porn-drugs/article_403079a5-4491-57f3-8a9e-9e91e3de8651.html'
                         target="_blank"><strong>Prosecutor: Retired Boise priest found with child porn,
                             drugs</a></strong><br>
-                    Court reporting. <strong>February 2018</strong>
+                    Court reporting.<br>February 2018
                 </div>
                 <div class='column is-one-third'>
                     <a href='https://www.idahopress.com/news/local/2cscoop/at-columbia-high-in-nampa-300-students-walk-out-majority-do-not/article_8b759674-ace6-5b55-adcc-39071b629a11.html'
                         target="_blank"> <strong>At Columbia High in Nampa, 300 students walk out, majority do
                             not</a><br>
                     </strong>Part of the paper's series of local schools' coverage on the day of anti-gun walkouts
-                    following the 2018 Parkland shooting. <strong>March 2018</strong>
+                    following the 2018 Parkland shooting.<br>March 2018
                 </div>
                 <div class="column is-one-third">
 
                     <a href='https://www.idahopress.com/news/local/2cscoop/new-pallet-service-center-to-open-in-caldwell/article_e67a76b4-c8e6-5196-ad5b-73c5cc82f7ac.html'
                         target="_blank"><strong>Then and now: What Caldwell's foreign trade zone has done for the
                             area</a></strong><br>
-                    Local government accountability reporting. <strong>April 2018</strong>
+                    Local government accountability reporting.<br>April 2018
                 </div>
                 </p>
             </div>
@@ -213,20 +211,20 @@
                                 inventory shrinks, people look to living in RVs</a></strong><br>
                         Special report about Idaho residents choosing to live in RVs full-time owing to sky-rocketing
                         housing
-                        prices. <br><strong>April 2018</strong>
+                        prices. <br>April 2018
                     </div>
                     <br>
                     <div class="column is-one-third">
                         <a href='https://www.idahopress.com/news/local/2cscoop/in-the-midst-of-an-immigration-stir-up-one-local-teen-is-ready-to-fight/article_97bde17b-604a-55e0-9dcf-bc946b688916.html'
                             target="_blank"><strong>In the midst of an immigration stir up, one local teen is ready to
                                 fight</a></strong><br>
-                        <strong>September 2017</strong>
+                       September 2017
                     </div>
                     <br>
                     <div class="column is-one-third">
                         <a href='https://www.idahopress.com/news/local/2cscoop/middleton-samaritan-hopes-to-see-again/article_40cb2683-c384-5b7b-a5fb-0e044968a52e.html'
                             target="_blank"><strong>Middleton Samaritan hopes to see again</a></strong><br>
-                        Human-interest story on a samaritan's fundraising efforts. <strong>November 2017</strong>
+                        Human-interest story on a samaritan's fundraising efforts. <br>November 2017
                     </div>
                     <!-- </div> -->
                     <!-- <br> -->
